--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,25 @@
-title: Hello, world! I'm David Freeman
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Hey there, this is Luca Morreale
+description: Personal Page of Luca Morreale
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
+author: Luca Morreale # add your name
+author-img: me.jpg # add your photo
+about-author: PhD candidate @ UCL # add description
+social-twitter: HeineCoder # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
+social-github: luca-morreale # add your Github handle
 social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-email: luca.morreale.19@ucl.ac.uk # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: luca-morreale # add your discus identifier
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-123734832-1 # Google Analytics
 
 # Build Settings
 markdown: kramdown
