--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ about-author: PhD candidate @ UCL # add description
 social-twitter: HeineCoder # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: luca-morreale # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin: luca-morreale-a29a72112 # add your Linkedin handle
 social-email: luca.morreale.19@ucl.ac.uk # add your Email address
 
 # Disqus
