--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: Luca Morreale # add your name
 author-img: me.jpg # add your photo
 about-author: PhD candidate @ UCL # add description
 social-twitter: HeineCoder # add your Twitter handle
-social-facebook: # add your Facebook handle
+social-scholar: m8p3WAEAAAAJ # add your Facebook handle
 social-github: luca-morreale # add your Github handle
 social-linkedin: luca-morreale-a29a72112 # add your Linkedin handle
 social-email: luca.morreale.19@ucl.ac.uk # add your Email address
