--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hey there, this is Luca Morreale
+title: Luca Morreale's Personal Website
 description: Personal Page of Luca Morreale
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -8,7 +8,8 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Luca Morreale # add your name
 author-img: me.jpg # add your photo
-about-author: PhD candidate @ UCL # add description
+author-cv: cv.pdf # add your photo
+about-author: PhD candidate at University College London (UCL) # add description
 social-twitter: HeineCoder # add your Twitter handle
 social-scholar: m8p3WAEAAAAJ # add your Facebook handle
 social-github: luca-morreale # add your Github handle
