Update google analytics tag

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-email: luca.morreale.19@ucl.ac.uk # add your Email address
 discus-identifier: luca-morreale # add your discus identifier
 
 # Tracker
-analytics: UA-123734832-1 # Google Analytics
+analytics: G-T4XHKG4BG4 # Google Analytics
 
 # Build Settings
 markdown: kramdown
