Add PhD Thesis and update Bio

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Luca Morreale # add your name
 author-img: me.jpg # add your photo
 author-cv: cv.pdf # add your photo
-about-author: PhD candidate at University College London (UCL) # add description
+about-author: Researcher # PhD candidate at University College London (UCL) # add description
 social-twitter: LucaMorreale_ # add your Twitter handle
 social-scholar: m8p3WAEAAAAJ # add your Facebook handle
 social-github: luca-morreale # add your Github handle
